# bagaga

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  ILineRenderer.h  LineRendererTestService.cpp  LineRendererTestService.h  PhysicsService.cpp  PhysicsService.h  SdlLineRenderer.cpp  SdlLineRenderer.h  main.cpp
common/: AutoRotate.h  AutoRotateSystem.cpp  AutoRotateSystem.h  CircleCollider.h  CollisionDetectionSystem.cpp  CollisionDetectionSystem.h  IDeviceSelector.h  ILineRenderer.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Polyline.h  PolylineVisualSystem.cpp  PolylineVisualSystem.h  Pose2D.h  QueueFamilyFilter.cpp  QueueFamilyFilter.h  QueueIndexFinder.cpp  SdlLineRenderer.cpp  SdlLineRenderer.h  SdlVulkanService.cpp  SdlVulkanService.h  SmartDeviceSelector.h  VulkanLineRenderer.cpp  VulkanLineRenderer.h  WindowTitleService.cpp  WindowTitleService.h
common/vlk/: BaseVulkanRenderLayer.cpp  BaseVulkanRenderLayer.h  Buffer.cpp  Buffer.h  ColorBlendState.cpp  ColorBlendState.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DepthStencilState.cpp  DepthStencilState.h  DynamicState.cpp  DynamicState.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IVulkanRenderLayer.h  IVulkanRenderSystem.h  InputAssembly.cpp  InputAssembly.h  LogicalDevice.cpp  LogicalDevice.h  Memory.cpp  Memory.h  Multisampling.cpp  Multisampling.h  NameList.cpp  NameList.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineLayout.cpp  PipelineLayout.h  Queue.cpp  Queue.h  QueueIndexFinder.h  Rasterizer.cpp  Rasterizer.h  RenderPass.cpp  (+19 more)
common/vlk/shd/: frag.h  shader2.vert  vert.h  vert2.h
demo/: CMakeLists.txt  CollisionTestService.cpp  CollisionTestService.h  CreateEntityTestService.cpp  CreateEntityTestService.h  EntityTestService.cpp  EntityTestService.h  LineRendererTestService.cpp  LineRendererTestService.h  LinearMovement.h  LinearMovementSystem.cpp  LinearMovementSystem.h  main.cpp
server/: readme.txt
util/: Bin2Hrd.cpp  CMakeLists.txt  readme.md
vtest/: CMakeLists.txt  main.cpp
